# ble-mcp-server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  server.json
.github/workflows/: cicd.yml
ble_mcp_server/: __init__.py  __main__.py  handlers_ble.py  handlers_introspection.py  handlers_plugin.py  handlers_spec.py  handlers_trace.py  helpers.py  plugins.py  server.py  specs.py  state.py  trace.py
docs/: concepts.md  tools.md
examples/demo-device/: README.md  demo-device.md  demo_device.py  gatt_server.py
tests/: ble-mcp-e2e-tests.md  conftest.py  test_handlers_ble.py  test_handlers_introspection.py  test_plugins.py  test_server.py  test_specs.py  test_state.py  test_trace.py
tools/: mcp_cli.py
