[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ble-mcp-server"
version = "0.1.0"
description = "Bluetooth Low Energy MCP server for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "bleak>=2.1,<3",
    "mcp>=1.0,<2",
]

[project.scripts]
ble_mcp = "ble_mcp_server.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
